--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2015-09-14 version 0.2.8
+- FIX: undo ocat -v change
+
 2015-09-14 version 0.2.7
 
 - FIX: ocat -v correctly displays configured JSON_INDENT
