2016-02-25 version 0.5.3 - FIX: mqtt user/pass from config file - UPD: defaults file now contains most config settings - UPD: ocat -v explicitly shows yes/no for MQTT/HTTP - NEW: hooks in httpmode - REM: r-only mode removed - FIX: squashed a number of memory leaks - NEW: encryption in responses of httpmode - UPD: API supports GPX output - NEW: friends (locations, cards) in http mode - UPD: LMDB is no longer optional during build - UPD: remove Hosted mode (#86) - NEW: HTTP mode - UPD: remove support for /msg - UPD: startup log message includes version
2016-02-18 version 0.5.1
- FIX: RHEL postinstall shoud run on update as well

2016-02-17 version 0.5.0
- FIX: License: GPL2 (#18)
- NEW: view contains CARD's avatar if available, as does last/
- FIX: map heights _ought_ to now be ok, also on mobile devices
- NEW: small utility for creating view auth
- NEW: support for VIEWs with optional digest authentication
- NEW: gravatar2card.sh and github2card.py in contrib/faces
- FIX: use of limit in locations api

2016-02-09 version 0.4.9
- NEW: introduce /etc/default/ot-recorder
- UPD: GPX output now contains elevation and UTC time
- UPD: default --label on live map changed from "Recorder" to "OwnTracks"
- NEW: optional rename of topics in map popups (#79)
- FIX: mongoose correctly identifies changed files (304 vs 200 and Etag)
- NEW: points on GeoJSON map are now clickable for infowindow (#78)
- NEW: GeoJSON points now have tst in properties (#78)
- FIX: map with extra info in popup box (#77)
- NEW: packaging for Centos7
- NEW: ot-recorder --debug
- FIX: ocat version shows libmosquitto and sodium versions

2016-01-27 version 0.4.8
- FIX: finish Debian8 packaging
- FIX: add missing entry to reason table which could cause SIGSEGV
- FIX: add public domain base64.[ch] (#18)
- NEW: experimental support for payload decryption with per/user secret keys
- FIX: ignore SIGPIPE
- NEW: API endpoint /version returns Recorder version

2016-01-11 version 0.4.7
- NEW: Beacon messages are now 

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 
+2016-02-25 version 0.5.3
+- FIX: mqtt user/pass from config file
+
 2016-02-25 version 0.5.2
 - UPD: defaults file now contains most config settings
 - UPD: ocat -v explicitly shows yes/no for MQTT/HTTP
