2016-03-02 version 0.5.8 - FIX: topic missing in last/

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 
 
+2016-03-02 version 0.5.8
+- FIX: topic missing in last/
+
 2016-03-02 version 0.5.7
 - FIX: linestring map shows position only; no longer broken date (#97)
 - FIX: Greenwich alarms were stored in last/ as ../alarm
