--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 
+2016-03-04 version 0.6.1
+- NEW: received payload may contain _geoprec:N to override precision (#58)
+- FIX: view's page returns content-type
 
 2016-03-04 version 0.6.0
 - UPD: view can specify hours instead of from/to (#99)
