--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+
+2016-05-30 version 0.6.4
+- FIX: revert debian config file location
+
 2016-05-30 version 0.6.3
 - FIX: views now have a favicon (#121)
 - NEW: Table and Map now have vel and cog (#117)
