--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
 
+2018-09-01 version 0.7.8
+- NEW: support for OSM on live map, by @avanc (#244)
+- FIX: compilation on gcc 8 no longer warns about truncated strings (#242)
+- FIX: remove deprecated signed_in in Google maps
+- UPD: Use OpenCage geocoder for reverse geocoding (#202)
+- NEW: Support for OpenCage in Lua
+
 2018-04-30 version 0.7.6
 - NEW: contrib/freebsd/  notes and rc (#229)
 - NEW: View using Leaflet (#226)
