--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
 
+2021-06-29 version 0.8.7
+- UPD: Leaflet GeoJSON map point popups now contain accuracy if available (#352)
+- FIX: prefix Content-Length by X- to avoid issues with chunked encoding #350
+- FIX: fix off-by-one error introduced in #328 (Safari only)
+
 2020-03-10 version 0.8.6
 - FIX: default views directory results in view not found (#338)
 
