--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,5 @@
-
+2022-05-24 version 0.9.0
+- NEW: OTR_LMDBSIZE can be set in the environment to define size of LMDB; bytes, min 10 MB (#348)
 - UPD: modernize Recorder UI (not the actual Frontend project) (#386)
 
 2022-03-14 version 0.8.8
