--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
 
+2023-10-24 version 0.9.4
+- FIX: logs to stderr if DOCKER_RUNNING in environment (#426)
+- FIX: typo in help descriptions (#423)
+- NEW: Updated Google Timeline Import script (#407)
+- UPD: Improve GPX-Import (#413)
+- FIX: Table of Locations sorting issue (#415)
+
 2022-12-09 version 0.9.3
 - FIX: JS fixes for disappeared links (#406)
 - FIX: instructions for building on FreeBSD 13.1 with TOURS configured (#405)
