--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,10 @@
 
 
+2023-10-24 version 0.9.6
+- FIX: debian packaging
+
+
 2023-10-24 version 0.9.5
-2023-10-24 version 0.9.4
 - FIX: logs to stderr if DOCKER_RUNNING in environment (#426)
 - FIX: typo in help descriptions (#423)
 - NEW: Updated Google Timeline Import script (#407)
